# TP_grupal

./: .gitignore  DAXCalendar  DEPLOYMENT.md  README.md  data.dvc  dvc.yaml  ingreso_egreso_edificio  metrics.json  metrics_rf.json  metrics_test.json  metrics_test_rf.json  metrics_test_xgb.json  metrics_threshold.json  metrics_threshold_fe.json  metrics_threshold_xgb.json  metrics_tune.json  metrics_tune_rf.json  metrics_tune_xgb.json  metrics_xgb.json  nombres_y_pisos  params.yaml  requirements.txt
.dvc/: config  config.txt
artifacts/: .gitignore  aliases_applied.json  best_params.json  best_params_rf.json  best_params_xgb.json  best_threshold.json  best_threshold_xgb.json  selection.json  (+2 more)
tp_grupal_dagster/: README.md  pyproject.toml  setup.cfg  setup.py
tp_grupal_dagster/.tmp_dagster_home_9q_pfbpl/history/: runs.db
tp_grupal_dagster/.tmp_dagster_home_9q_pfbpl/history/runs/: .db  a5bc0136-20e0-47b3-8e47-79d1da0175b3.db  index.db
tp_grupal_dagster/.tmp_dagster_home_9q_pfbpl/schedules/: schedules.db
tp_grupal_dagster/.tmp_dagster_home_9q_pfbpl/storage/: f1_barchart  pr_curve_fe  roc_curve_fe  test_metrics
tp_grupal_dagster/.tmp_dagster_home_a2agfjif/history/: runs.db
tp_grupal_dagster/.tmp_dagster_home_a2agfjif/history/runs/: index.db
tp_grupal_dagster/.tmp_dagster_home_a2agfjif/schedules/: schedules.db
tp_grupal_dagster/artifacts/: champion_metadata.json  champion_metadata.json.dvc
tp_grupal_dagster/tp_grupal_dagster/: __init__.py  assets.py  definitions.py
tp_grupal_dagster/tp_grupal_dagster.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+147 files in other folders)
